Fixed spacing on IE7
Used overflow:hidden instead of div.clear
Fixes #10

--- a/template/templates/RunStrong/css/layout.css
+++ b/template/templates/RunStrong/css/layout.css
@@ -28,18 +28,18 @@ body { background: #f2f2f3; }
 }
 
 #wrapper > div {
-	position:relative; /* ie */
+	position: relative; /* ie CSS3 */
 	width: 900px;
 	padding: 79px 20px 10px;
-	margin: 10px auto 0px ;
+	margin: 10px auto 0px;
 	background-color: #ffffff;
 	border: 1px solid #d7d7d7;
     border-radius: 6px;
-	box-shadow: 0 2px 3px -2px rgba(93, 93, 93, 0.9);
+	box-shadow: 0 2px 3px -2px #5d5d5d;
 	behavior: url('templates/RunStrong/resources/PIE.htc');
+	overflow: hidden; /* clear, damn ie */
+	
 }
-
-.ie7 #wrapper { padding-bottom: 40px; }
 
 #content {
 	float: left;
